--- a/css/logs.css
+++ b/css/logs.css
@@ -1,4 +1,4 @@
-#logsSection{
+#logsSection {
     width: 70%;
     height: 100%;
     align-content: center;
@@ -8,50 +8,54 @@
     bottom: 0;
     position: absolute;
 
-}
-.content-section {
-    padding: 20px;
-}
+    .content-section {
+        padding: 20px;
+    }
 
-.table-bordered {
-    border: 1px solid #ddd;
-    border-radius: 5px;
-}
+    .table-bordered {
+        border: 1px solid #ddd;
+        border-radius: 5px;
+    }
 
-.table-success {
-    background-color: #d4edda;
-}
+    .table-success {
+        background-color: #d4edda;
+    }
 
-.table th,
-.table td {
-    text-align: center;
-    vertical-align: middle;
-}
+    .table th,
+    .table td {
+        text-align: center;
+        vertical-align: middle;
+    }
 
-.image-popup {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.8);
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-}
+    .image-popup {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.8);
+        justify-content: center;
+        align-items: center;
+        z-index: 1000;
+    }
 
-.image-popup img {
-    width: 50%;
-    max-width: 600px;
-    border: 5px solid white;
-}
+    .image-popup img {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 60%;
+        max-width: 600px;
+        border: 5px solid white;
+    }
 
-.image-popup .close {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    color: white;
-    font-size: 24px;
-    cursor: pointer;
+    .image-popup .close {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        color: white;
+        font-size: 24px;
+        cursor: pointer;
+    }
 }
