--- a/css/crop.css
+++ b/css/crop.css
@@ -108,3 +108,35 @@
 .mb-3 {
     margin-bottom: 15px;
 }
+#imagePopup {
+    display: none; /* Initially hidden */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    justify-content: center; /* Horizontally center the image */
+    align-items: center; /* Vertically center the image */
+    z-index: 999;
+}
+
+#popupImage {
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    max-width: 50%; /* Adjust image size for responsiveness */
+    max-height: 50%;
+    border: 2px solid white; /* Optional border for better visibility */
+}
+
+#imagePopup .close {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 30px;
+    color: white;
+    cursor: pointer;
+}
+
