--- a/css/field.css
+++ b/css/field.css
@@ -1,17 +1,6 @@
-.image-popup {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.8);
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
 
-}
-#fieldsSection{
+
+#fieldsSection {
     width: 70%;
     height: 100%;
     align-content: center;
@@ -22,23 +11,45 @@
     position: absolute;
 
 }
-.image-popup img {
-    width: 50%;
-    max-width: 600px;
-    border: 5px solid white;
+
+/* Popup Image Styling */
+#fieldImagePopup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8); /* Background overlay */
+    z-index: 1000;
+    display: flex; /* Flexbox for centering */
+    justify-content: center; /* Horizontally center */
+    align-items: center; /* Vertically center */
 }
 
-.image-popup .close {
+#popupFieldImage {
+    max-width: 50%; /* Limit image size */
+    max-height: 50%; /* Prevent overflow */
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border: 2px solid white; /* Optional border for better visibility */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5); /* Optional shadow for better focus */
+}
+
+#fieldImagePopup .close {
     position: absolute;
     top: 20px;
-    right: 20px;
+    right: 30px;
+    font-size: 30px;
     color: white;
-    font-size: 24px;
     cursor: pointer;
 }
 
+/* Styling for Images in the Table */
 .table-img {
     width: 50px;
     height: auto;
     cursor: pointer;
 }
+
